--- a/.github/workflows/sonar_daily_export.yml
+++ b/.github/workflows/sonar_daily_export.yml
@@ -33,6 +33,5 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add sonar_blocktrades.json
-          git commit -m "Daily update: sonar_blocktrades.json"
-          git push
+          git add sonar_blocktrades.json || true
+          git diff --cached --quiet && echo "No changes to commit" || (git commit -m "Daily update: sonar_blocktrades.json" && git push)
